--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,8 +23,10 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation "android.arch.persistence.room:runtime:1.0.0"
+    testImplementation group: 'org.mockito', name: 'mockito-all', version: '1.8.4'
     annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestCompile 'org.hamcrest:hamcrest-library:1.3'
 }
